--- a/css/style.css
+++ b/css/style.css
@@ -20,21 +20,39 @@ header {
   -webkit-transition: all 1s ease;
 }
 header h1 {
-  color: #0f8491;
-  font-size: 50px;
-  margin: 25px 0;
-  transition: all 1s ease;
-  -webkit-transition: all 1s ease;
+  display: none;
+}
+header .logo {
+  position: relative;
+  width: 200px;
+  margin: 20px auto;
+}
+header .logo img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 200px;
+  transition: opacity 0.7s ease-in;
+}
+header .logo img.normal {
+  opacity: 1;
+}
+header .logo img.white {
+  opacity: 0;
 }
 header.colored {
   background-color: #0f8491;
   transition: all 1s ease;
-  -webkit-transition: all 1s ease;
+  -webkit-transition: all .7s ease;
 }
-header.colored h1 {
-  color: #fff;
-  transition: all 1s ease;
-  -webkit-transition: all 1s ease;
+header.colored .logo img {
+  transition: opacity 1s ease-in;
+}
+header.colored .logo img.normal {
+  opacity: 0;
+}
+header.colored .logo img.white {
+  opacity: 1;
 }
 #main {
   padding-top: 125px;
