--- a/css/style.less
+++ b/css/style.less
@@ -28,23 +28,37 @@ header{
     -webkit-transition: all 1s ease;
 
     h1 {
-        color: @accentColor;
-        font-size: 50px;
-        margin: 25px 0;
-        transition: all 1s ease;
-        -webkit-transition: all 1s ease;
+        display: none;
+    }
+    .logo{ 
+        position: relative;
+        width: 200px;
+        margin: 20px auto;
+        img{
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 200px;
+            transition: opacity .7s ease-in;
+
+            &.normal{ opacity: 1; }
+            &.white{ opacity: 0; }            
+        }   
     }
 
     &.colored{
     background-color: @accentColor;
     transition: all 1s ease;
-    -webkit-transition: all 1s ease;
+    -webkit-transition: all .7s ease;
     
-    h1 {
-        color: #fff;
-        transition: all 1s ease;
-        -webkit-transition: all 1s ease;
-    }
+        .logo{
+            img{
+                transition: opacity 1s ease-in;
+                
+                &.normal{ opacity: 0; }
+                &.white{ opacity: 1; }  
+            }       
+        }
 
     }
 }
