--- a/css/style.css
+++ b/css/style.css
@@ -7,13 +7,13 @@ body {
 body > div {
   position: relative;
   min-height: 100%;
+  min-width: 320px;
 }
 header {
   background-color: #fff;
   box-shadow: 0 8px 17px 0 rgba(0, 0, 0, 0.2);
   height: 100px;
   position: fixed;
-  text-align: center;
   top: 0;
   width: 100%;
   transition: all 1s ease;
@@ -29,7 +29,7 @@ header .logo {
 }
 header .logo img {
   position: absolute;
-  top: 0;
+  top: 5px;
   left: 0;
   width: 200px;
   transition: opacity 0.7s ease-in;
@@ -43,7 +43,6 @@ header .logo img.white {
 header.colored {
   background-color: #0f8491;
   transition: all 1s ease;
-  -webkit-transition: all .7s ease;
 }
 header.colored .logo img {
   transition: opacity 1s ease-in;
@@ -53,6 +52,110 @@ header.colored .logo img.normal {
 }
 header.colored .logo img.white {
   opacity: 1;
+}
+header.colored nav button span {
+  background-color: #fff;
+}
+header .overlay {
+  background-color: rgba(0, 0, 0, 0);
+  bottom: 0;
+  cursor: pointer;
+  left: 0;
+  position: fixed;
+  top: 0;
+  z-index: 9000;
+}
+nav {
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 9001;
+}
+nav button {
+  background: transparent;
+  border: none;
+  cursor: pointer;
+  margin-top: 25px;
+  margin-left: 20px;
+  width: 45px;
+  height: 45px;
+  position: relative;
+  z-index: 2;
+}
+nav button:active,
+nav button:focus {
+  outline: none;
+}
+nav button span {
+  font-size: 0;
+  display: block;
+  height: 6px;
+  border-radius: 3px;
+  width: 45px;
+  background-color: #0f8491;
+  position: absolute;
+  transition: 0.5s ease-in-out;
+}
+nav button span:nth-child(1) {
+  top: 0px;
+}
+nav button span:nth-child(2) {
+  top: 15px;
+}
+nav button span:nth-child(3) {
+  top: 30px;
+}
+nav ul {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  background-color: #fff;
+  overflow: hidden;
+  width: 0;
+  padding-top: 100px;
+  z-index: 1;
+  transition: 0.5s ease-in-out;
+}
+nav ul li {
+  width: 250px;
+  padding: 0 20px;
+  min-height: 50px;
+  line-height: 50px;
+}
+nav ul li.section-title {
+  font-weight: 700;
+}
+nav ul li:not(.section-title):hover {
+  cursor: pointer;
+  background-color: rgba(0, 0, 0, 0.1);
+}
+nav ul li a {
+  color: #0f8491;
+}
+.nav-active nav button span:nth-child(1),
+.nav-active nav button span:nth-child(2),
+.nav-active nav button span:nth-child(3) {
+  background-color: #ff8080;
+}
+.nav-active nav button span:nth-child(1) {
+  transform: rotateZ(-45deg) rotateY(180deg) translate(5px, 4px);
+  width: 25px;
+}
+.nav-active nav button span:nth-child(2) {
+  transform: rotateY(180deg);
+}
+.nav-active nav button span:nth-child(3) {
+  transform: rotateZ(45deg) rotateY(180deg) translate(5px, -4px);
+  width: 25px;
+}
+.nav-active nav ul {
+  width: 250px;
+  transition: 0.5s ease-in-out;
+}
+.nav-active .overlay {
+  right: 0;
+  background-color: rgba(0, 0, 0, 0.7);
 }
 #main {
   padding-top: 125px;
