--- a/css/style.css
+++ b/css/style.css
@@ -16,6 +16,7 @@ header {
   position: fixed;
   top: 0;
   width: 100%;
+  z-index: 1;
   transition: all 1s ease;
   -webkit-transition: all 1s ease;
 }
@@ -63,7 +64,9 @@ header .overlay {
   left: 0;
   position: fixed;
   top: 0;
-  z-index: 9000;
+  right: 0;
+  z-index: -1;
+  transition: background-color 0.5s esase-in;
 }
 nav {
   position: absolute;
@@ -154,7 +157,7 @@ nav ul li a {
   transition: 0.5s ease-in-out;
 }
 .nav-active .overlay {
-  right: 0;
+  z-index: 9000;
   background-color: rgba(0, 0, 0, 0.7);
 }
 #main {
