--- a/css/style.less
+++ b/css/style.less
@@ -64,15 +64,15 @@ header{
         }
     }
      .overlay{
-         background-color: rgba(0,0,0,0.0);
+         background-color: #000;
          bottom: 0;
          cursor: pointer;
          left:0;
+         opacity: 0;
          position:fixed;
          top:0;
          right: 0;
          z-index:-1;
-         transition: background-color 0.5s esase-in;
      }
 }
 nav{
@@ -173,7 +173,8 @@ nav{
      }
      .overlay{
          z-index: 9000;
-         background-color: rgba(0,0,0,0.7);
+         opacity: 0.7;
+         transition: opacity .5s ease-in;
      }
 
 }
