--- a/css/style.less
+++ b/css/style.less
@@ -68,12 +68,12 @@ header{
          background-color: #000;
          bottom: 0;
          cursor: pointer;
-         left:0;
          opacity: 0;
          position:fixed;
          top:0;
          right: 0;
          z-index:-1;
+         width: 0;
      }
 }
 nav{
@@ -142,7 +142,11 @@ nav{
                 background-color: rgba(0,0,0,0.1);
             }
             a{
+                display: block;
+                width: 100%;
+                line-height:50px;
                 color: @accentColor;
+                text-decoration: none;
             }
         }
     }
@@ -174,6 +178,7 @@ nav{
      }
      .overlay{
          z-index: 9000;
+         width: 100%;
          opacity: 0.7;
          transition: opacity .5s ease-in;
      }
@@ -307,4 +312,12 @@ footer{
 .clear-both{
     clear: both;
     display: block;
+}
+
+
+// Features
+ld-cover-calc{
+    canvas{
+        background: #fff;
+    }
 }
