--- a/css/style.less
+++ b/css/style.less
@@ -1,323 +1,166 @@
+/* Imports */
+@import "reset.css";
+@import "button.css";
+
 /* Variables */
 @accentColor: #0f8491;
-@lightGrey: #dedede;
+@bgGrey: #f0f0f0;
+@lightGrey: lightgrey;
 @darkGrey: #888;
 
 @boxShadow: 0 8px 17px 0 rgba(0, 0, 0, 0.2);
 
 
 body{
-    background-color: @lightGrey;
+    background-color: @bgGrey;
     font-family: 'Roboto', sans-serif;
     font-size: 16px;
-    
-    > div{
+    min-width: 320px;
+}
+
+.section{
+    padding: 30px;
+
+    .section-content{
+        border: 1px solid @lightGrey;
+        margin: 0 auto;
+        max-width: 800px;
+        text-align: center;
+        padding: 0.2em 1em 3em 1em;
         position: relative;
-        min-height: 100%;
-        min-width: 320px;
+
+        .btn-show-next{
+            border: none;
+            content: '';
+            width: 62px;
+            height: 62px;
+            border-radius: 50%;
+            position: absolute;
+            display: block;
+            bottom: -31px;
+            left: ~"calc(50% - 31px)";
+            background-color: @bgGrey;
+            cursor: pointer;
+            
+            > span{
+                display: none;
+            } 
+
+            &:before{
+                border: 1px solid @lightGrey;
+                color: @lightGrey;
+                content: "\f107";
+                font-family: 'FontAwesome';
+                font-size: 4em;
+                font-weight: lighter;
+                line-height: 50px;
+                width: 50px;
+                height: 50px;
+                border-radius: 50%;
+                position: absolute;
+                display: block;
+                top: 5px;
+                left: 5px;
+            } 
+
+            &:hover:before{
+                background-color: rgba(0, 0, 0, 0.05);
+            }
+        } 
+    }
+
+    .section-title {
+        background: @bgGrey;
+        color: @lightGrey;
+        display: inline-block;
+        font-size: 2em;
+        margin-top: -0.7em;
+        padding: 0.2em 1em;
     }
 }
 
-header{ 
-    background-color: #fff;
-    box-shadow: @boxShadow;
-    height: 100px;
-    position: fixed;
-    top: 0;
-    width:100%; 
-    z-index: 1;
-    transition: all 1s ease;
-    -webkit-transition: all 1s ease;
 
-    h1 {
-        display: none;
+.photo img{
+    width: 200px;
+    border-radius: 50%;
+    
+}
+
+/* Competences */
+#competences{
+    .simple-list >li{
+        margin-bottom: 10px;
+
+        >p{
+            font-weight: 600;
+        }
     }
-    .logo{ 
-        position: relative;
-        width: 200px;
-        margin: 20px auto;
-        img{
-            position: absolute;
-            top: 5px;
-            left: 0;
-            width: 200px;
-            transition: opacity .5s ease-in;
+    .float-list{
+        margin: 0 auto; 
 
-            &.normal{ opacity: 1; }
-            &.white{ opacity: 0; }            
+        > li{
+        display: inline-block;
+        padding: 4px;
+        margin: 0 2px;
+        border: 1px solid @lightGrey;
         }   
     }
-
-    &.colored{
-    background-color: @accentColor;
-    transition: all 1s ease;
-    
-        .logo{
-            img{
-                transition: opacity .5s ease-in;
-                
-                &.normal{ opacity: 0; }
-                &.white{ opacity: 1; }  
-            }       
-        }
-        nav button span{
-            background-color: #fff;
-        }
-    }
-     .overlay{
-         background-color: #000;
-         bottom: 0;
-         cursor: pointer;
-         opacity: 0;
-         position:fixed;
-         top:0;
-         right: 0;
-         z-index:-1;
-         width: 0;
-     }
 }
-nav{
-    position: absolute;
-    top: 0;
-    left: 0;
-    z-index:9001;
 
-    button{
-        background: transparent;
-        border: none;
-        cursor: pointer;
-        margin-top: 25px;
-        margin-left:20px;
-        width: 45px;
-        height: 45px;
-        position: relative;
-        z-index:2;
-
-        &:active,&:focus{
-            outline:none;
-        }
-        span{
-            font-size: 0;
-            display: block;
-            height: 6px;
-            border-radius: 3px;
-            width: 45px;
-            background-color: @accentColor;
-            position: absolute;
-            transition: .7s ease-in-out;
+/* Experiences */
+#experiences{
+    .job{
+        & + .job{
+            margin-top: 20px;   
         }
 
-        span:nth-child(1){
-            top:0px;
+        .title,
+        .employer{
+            display: inline-block
         }
-        span:nth-child(2){
-            top:15px;
+
+        .title {
+            font-weight: 600;
+
+            &::after {
+                content: ' - ';
+                display: inline;
+            }
         }
-        span:nth-child(3){
-            top:30px;
-        }
-    }
-    ul{
-        position: fixed;
-        top: 0;
-        bottom: 0;
-        left: 0;
-        background-color: #fff;
-        overflow: hidden;
-        width: 0;
-        padding-top: 100px;
-        z-index:1;
-        transition: .5s ease-in-out;
-        
-        li{            
-            width:250px;
-            padding: 0 20px;
-            min-height: 50px;
-            line-height:50px;
-            &.section-title{
-                font-weight: 700;
-            }
-            &:not(.section-title):hover{
-                cursor: pointer;
-                background-color: rgba(0,0,0,0.1);
-            }
-            a{
-                display: block;
-                width: 100%;
-                line-height:50px;
-                color: @accentColor;
-                text-decoration: none;
-            }
+
+        .description {
+            text-align: justify;
+            color: #444;
         }
     }
 }
-.nav-active{
-     nav{
-        button{
-            span:nth-child(1),
-            span:nth-child(2),
-            span:nth-child(3){
-                background-color: #ff8080;
-            }
-            span:nth-child(1){
-                transform: rotateZ(-45deg) rotateY(180deg) translate(5px, 4px);
-                width: 25px;
-            }
-            span:nth-child(2){
-                transform: rotateY(180deg);
-            }
-            span:nth-child(3){
-                transform: rotateZ(45deg) rotateY(180deg) translate(5px, -4px);
-                width: 25px;
-            }
-        }
-        ul{
-            width:250px;
-            transition: .5s ease-in-out;
-        }
-     }
-     .overlay{
-         z-index: 9000;
-         width: 100%;
-         opacity: 0.7;
-         transition: opacity .5s ease-in;
-     }
-
-}
-#main{
-    padding-top: 125px;
-    padding-bottom: 100px;
-    min-width: 320px;
-
-    #personnal-info{
-        text-align: center;
-
-        .photo{
-            background-image: url("../img/profile-picture.jpg");
-            background-repeat: no-repeat;
-            background-size: cover;
-            border: 2px solid @accentColor;
-            border-radius: 50%;
-            box-shadow: @boxShadow;
-            margin: 0 auto;
-            width: 200px;
-            height: 200px;
-
-            img{
-                display:none
-            }
-        }
-
-        h2{
-            background: @accentColor;
-            border-radius: 2px;
-            box-shadow: @boxShadow;
-            color: #fff;  
-            display: block;
-            font-size: 30px;
-            margin: 30px auto;
-            padding: 20px;
-            width: 300px;  
-        }
+/* Scholarship */ 
+#scholarship{
+    .school + .school{
+        margin-top: 20px;
     }
-}
-
-.card{
-    background-color: #fff;
-    border-radius: 2px;
-    box-shadow: @boxShadow;
-    margin:  20px auto;
-    max-width: 600px;
-    padding: 20px;
-
-    h3{
-        color: @accentColor;
-        font-size: 25px;
-    }
-
-    .simple-list{
-        margin: 10PX 0; 
-        >li{
-            display: block;
-            clear: both;
-            >p{
-                font-size: 18px;
-                font-weight: 600;
-            }
-            ul{
-                li{
-                    float: left;
-                    display: block;
-                    background-color: @accentColor;
-                    border-radius: 2px;
-                    margin: 2px;
-                    padding: 5px;
-                    color: #fff;
-                }
-            }
-        }
-        >li+li{
-            padding-top: 5px;
-        }
-    }
-}
-
-.job, .school{
-    margin: 10PX 0; 
-    .title, .course{
-        font-size: 18px;
+    .school .course{
         font-weight: 600;
-        display: inline;
     }
-    .employer, .establishment{
-        font-size: 18px;
-        font-weight: 600;
-        color: @darkGrey;
-        display: inline;
-        
-        &:before{
-            content: ' | ';
-            color: @accentColor;
-        }
-    }
-    .description{
-        white-space: pre-wrap;
-    }
-}
+} 
+
+
+/* Contact */
 #contact{
-    >div{
-        font-weight: 600;
-        margin-top: 10px;
-        line-height: 25px;
+    p{
+        padding: 5px;
     }
-}
-footer{
-    text-align: center;    
-
-    div{
-        bottom: 0;
-        left: 0;
-        position: absolute;
-        right:0;
-
-        .copyright{
-            color: @darkGrey;
-            font-size: 10px; 
-            margin: 20px 0;  
-            width: 100%;
-        }
+    .linkedin-link::before{
+        content: "\f08c";
+        font-family: 'FontAwesome';
+        font-size: 1em;
+        display: inline;
+        text-decoration: none;
+        color: #0077b5
     }
 }
 
-.clear-both{
-    clear: both;
-    display: block;
-}
-
-
-// Features
-ld-cover-calc{
-    canvas{
-        background: #fff;
-    }
+.back-to-top{
+    margin: 0 auto;
+    margin-top: 100px;
 }
