--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,11 @@ body {
   font-size: 16px;
   min-width: 320px;
 }
+@media (max-width: 500px) {
+  body {
+    font-size: 14px;
+  }
+}
 .section {
   padding: 30px;
 }
@@ -15,9 +20,9 @@ body {
   border: 1px solid lightgrey;
   margin: 0 auto;
   max-width: 800px;
-  text-align: center;
   padding: 1em;
   position: relative;
+  text-align: center;
 }
 .section .section-title {
   background: #f0f0f0;
@@ -29,35 +34,35 @@ body {
 }
 #menu {
   position: fixed;
-  right: 23px;
-  top: 50%;
+  right: 10px;
+  top: calc(50% - 30px);
   z-index: 10;
 }
 #menu li {
   height: 16px;
-  width: 15px;
   padding: 0;
+  width: 15px;
 }
 #menu li a {
-  cursor: pointer;
-  height: 6px;
-  width: 6px;
-  border-radius: 50%;
   background-color: #888;
+  border-radius: 50%;
+  cursor: pointer;
   display: block;
+  height: 6px;
   margin: 5px auto;
+  width: 6px;
   transition: all 0.5s ease-in-out;
 }
 #menu li a:hover {
   height: 10px;
-  width: 10px;
   margin: 5px auto;
+  width: 10px;
   transition: all 0.2s ease-in-out;
 }
 #menu li.active a {
   height: 12px;
-  width: 12px;
   margin: 2px auto;
+  width: 12px;
 }
 .photo img {
   border-radius: 50%;
