--- a/css/style.less
+++ b/css/style.less
@@ -5,8 +5,8 @@
 /* Variables */
 @accentColor: #0f8491;
 @bgGrey: #f0f0f0;
-@lightGrey: lightgrey;
 @darkGrey: #888;
+@lightGrey: lightgrey;
 
 @boxShadow: 0 8px 17px 0 rgba(0, 0, 0, 0.2);
 
@@ -18,6 +18,12 @@ body{
     min-width: 320px;
 }
 
+@media (max-width: 500px){
+    body{
+        font-size: 14px;
+    }
+}
+
 .section{
     padding: 30px;
 
@@ -25,9 +31,9 @@ body{
         border: 1px solid @lightGrey;
         margin: 0 auto;
         max-width: 800px;
-        text-align: center;
         padding: 1em;
         position: relative;
+        text-align: center;
 
     }
 
@@ -42,36 +48,36 @@ body{
 }
 #menu{
     position: fixed;
-    right: 23px;
-    top: 50%;
+    right: 10px;
+    top: ~"calc(50% - 30px)";
     z-index: 10;
 
     li{
         height: 16px;
-        width: 15px;
         padding: 0;
+        width: 15px;
 
         a{
-            cursor: pointer;
-            height: 6px;
-            width:6px;
-            border-radius: 50%;
             background-color: @darkGrey;
+            border-radius: 50%;
+            cursor: pointer;
             display: block;
+            height: 6px;
             margin: 5px auto;
+            width:6px;
             transition: all 0.5s ease-in-out;
 
             &:hover{
                 height: 10px;
-                width: 10px;
                 margin: 5px auto;
+                width: 10px;
                 transition: all 0.2s ease-in-out;
             }
         }
         &.active a{
             height: 12px;
-            width:12px;            
             margin: 2px auto;
+            width:12px;            
         }
     }
 }
