--- a/css/button.less
+++ b/css/button.less
@@ -5,7 +5,12 @@
     display: block;
 
     &.link{
-        text-decoration: underline;
         color: blue;
+        text-decoration: none;
+
+        &:hover{
+            text-decoration: underline;
+        }
     }
+
 }
