--- a/css/style.less
+++ b/css/style.less
@@ -24,11 +24,136 @@ body{
     }
 }
 
+.overlay{
+    background-color: #000;
+    bottom: 0;
+    cursor: pointer;
+    left:0;
+    opacity: 0;
+    position:fixed;
+    top:0;
+    right: 0;
+    z-index:-1;
+}
+
+nav{
+    bottom: 0;
+    left: 0;
+    position: fixed;
+    top: 0;
+    z-index: 9001;
+    
+    >button{
+        background: transparent;
+        border: none;
+        cursor: pointer;
+        height: 45px;
+        margin-left:20px;
+        margin-top: 25px;
+        position: relative;
+        width: 45px;
+        z-index:2;
+
+        &:active,&:focus{
+            outline:none;
+        }
+        span{
+            background-color: @accentColor;
+            border-radius: 3px;
+            display: block;
+            font-size: 0;
+            height: 6px;
+            position: absolute;
+            width: 45px;
+            transition: .7s ease-in-out;
+        }
+
+        span:nth-child(1){
+            top:0px;
+        }
+        span:nth-child(2){
+            top:15px;
+        }
+        span:nth-child(3){
+            top:30px;
+        }
+    }
+    
+    ul{
+        position: fixed;
+        top: 0;
+        bottom: 0;
+        left: 0;
+        background-color: @accentColor;
+        overflow: hidden;
+        width: 0;
+        padding-top: 100px;
+        z-index:1;
+        transition: .5s ease-in-out;
+        
+        li{            
+            width:250px;
+            padding: 0 20px;
+            min-height: 50px;
+            line-height:50px;
+            &.section-title{
+                font-weight: 700;
+            }
+            &:not(.section-title):hover{
+                background-color: rgba(0,0,0,0.1);
+            }
+            a{
+                color: #fff;
+                cursor: pointer;
+                text-decoration: none;
+                display: block;
+                width: inherit;
+                height: inherit;
+            }
+        }
+    }
+}
+.nav-active{
+     nav{
+        button{
+            span:nth-child(1),
+            span:nth-child(2),
+            span:nth-child(3){
+                background-color: #fff;
+            }
+            span:nth-child(1){
+                width: 50px;
+                top: 15px;
+                transform: rotateZ(-45deg) rotateY(180deg);
+            }
+            span:nth-child(2){
+                transform: rotateY(90deg);
+            }
+            span:nth-child(3){
+                width: 50px;
+                top: 15px;
+                transform: rotateZ(45deg) rotateY(180deg);
+            }
+        }
+        ul{
+            width:250px;
+            transition: .5s ease-in-out;
+        }
+     }
+     
+     .overlay{
+         z-index: 9000;
+         opacity: 0.7;
+         transition: opacity .5s ease-in;
+     }
+
+}
+
 .section{
     padding: 30px;
 
     .section-content{
-        border: 1px solid @lightGrey;
+        border: 1px solid @accentColor;
         margin: 0 auto;
         max-width: 800px;
         padding: 1em;
@@ -39,7 +164,7 @@ body{
 
     .section-title {
         background: @bgGrey;
-        color: @lightGrey;
+        color: @accentColor;
         display: inline-block;
         font-size: 2em;
         margin-top: -1.2em;
@@ -58,7 +183,7 @@ body{
         width: 15px;
 
         a{
-            background-color: @darkGrey;
+            background-color: @accentColor;
             border-radius: 50%;
             cursor: pointer;
             display: block;
@@ -82,6 +207,10 @@ body{
     }
 }
 
+.plain-page{
+    padding: 75px 40px 0 40px;
+}
+/* Profil */
 .photo img{
     border-radius: 50%;
     width: 200px;
