--- a/css/style.less
+++ b/css/style.less
@@ -149,6 +149,26 @@ nav{
 
 }
 
+
+.card{
+    background-color: #fff;
+    border-radius: 2px;
+    box-shadow: @boxShadow;
+    margin:  20px auto;
+    max-width: 600px;
+    padding: 20px;
+
+    h2{
+        color: @accentColor;
+        font-size: 2.5em;
+        padding-bottom: 20px;
+    }
+    h3{
+        font-size: 1.5em;
+        font-weight: 600;
+    }
+}
+
 .section{
     padding: 30px;
 
@@ -210,6 +230,8 @@ nav{
 .plain-page{
     padding: 75px 40px 0 40px;
 }
+
+
 /* Profil */
 .photo img{
     border-radius: 50%;
@@ -295,3 +317,19 @@ nav{
     margin: 0 auto;
     margin-top: 100px;
 }
+
+/*
+ *  CONTROLES
+ */
+ ld-controls{
+    #buttons{
+        .btn{
+            float: left;
+            margin: 5px;
+        }
+        h3{
+            padding-top: 15px;
+            clear: both;
+        }
+    }
+ }
