--- a/css/button.css
+++ b/css/button.css
@@ -1,8 +1,258 @@
+/* Colors */
+/* Box-Shadow */
 .btn {
-  background-color: transparent;
+  background-color: #9e9e9e;
   border: none;
+  border-radius: 2px;
+  box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
+  color: #000;
   cursor: pointer;
   display: block;
+  font-weight: 600;
+  height: 36px;
+  letter-spacing: .3px;
+  line-height: 36px;
+  outline: 0;
+  padding: 0 15px;
+  text-align: center;
+  text-transform: uppercase;
+  transition: all 0.3s ease-out;
+}
+.btn .ripple {
+  background-color: #fff;
+}
+.btn:hover {
+  box-shadow: 0 5px 11px 0 rgba(0, 0, 0, 0.18), 0 4px 15px 0 rgba(0, 0, 0, 0.15);
+  background-color: #b8b8b8;
+}
+.btn:not([ld-ripple-effect]):active {
+  background-color: #d1d1d1;
+}
+.btn.grey,
+.btn.default {
+  background-color: #9e9e9e;
+  color: #000;
+}
+.btn.grey:hover,
+.btn.default:hover {
+  background-color: #b8b8b8;
+}
+.btn.grey:not([ld-ripple-effect]):active,
+.btn.default:not([ld-ripple-effect]):active {
+  background-color: #d1d1d1;
+}
+.btn.blue {
+  background-color: #2196f3;
+  color: #fff;
+}
+.btn.blue:hover {
+  background-color: #51adf6;
+}
+.btn.blue:not([ld-ripple-effect]):active {
+  background-color: #82c4f8;
+}
+.btn.red {
+  background-color: #f44336;
+  color: #fff;
+}
+.btn.red:hover {
+  background-color: #f77066;
+}
+.btn.red:not([ld-ripple-effect]):active {
+  background-color: #f99d97;
+}
+.btn.green {
+  background-color: #4caf50;
+  color: #fff;
+}
+.btn.green:hover {
+  background-color: #6ec071;
+}
+.btn.green:not([ld-ripple-effect]):active {
+  background-color: #92cf94;
+}
+.btn.pink {
+  background-color: #e91e63;
+  color: #fff;
+}
+.btn.pink:hover {
+  background-color: #ee4c83;
+}
+.btn.pink:not([ld-ripple-effect]):active {
+  background-color: #f27ba3;
+}
+.btn.purple {
+  background-color: #9c27b0;
+  color: #fff;
+}
+.btn.purple:hover {
+  background-color: #bc37d3;
+}
+.btn.purple:not([ld-ripple-effect]):active {
+  background-color: #ca61dc;
+}
+.btn.yellow {
+  background-color: #ffeb3b;
+  color: #000;
+}
+.btn.yellow:hover {
+  background-color: #fff06e;
+}
+.btn.yellow:not([ld-ripple-effect]):active {
+  background-color: #fff5a1;
+}
+.btn.orange {
+  background-color: #ff9800;
+  color: #fff;
+}
+.btn.orange:hover {
+  background-color: #ffad33;
+}
+.btn.orange:not([ld-ripple-effect]):active {
+  background-color: #ffc166;
+}
+.btn.flat {
+  background-color: transparent;
+  box-shadow: none;
+  color: #000;
+}
+.btn.flat .ripple {
+  background-color: #9e9e9e;
+}
+.btn.flat:hover {
+  box-shadow: none;
+  background-color: rgba(158, 158, 158, 0.3);
+}
+.btn.flat:not([ld-ripple-effect]):active {
+  background-color: rgba(158, 158, 158, 0.5);
+}
+.btn.flat[ld-ripple-effect]:hover {
+  background-color: transparent;
+}
+.btn.flat[ld-ripple-effect]:active {
+  background-color: transparent;
+}
+.btn.flat[ld-ripple-effect].grey:hover,
+.btn.flat[ld-ripple-effect].default:hover,
+.btn.flat[ld-ripple-effect].blue:hover,
+.btn.flat[ld-ripple-effect].red:hover,
+.btn.flat[ld-ripple-effect].green:hover,
+.btn.flat[ld-ripple-effect].pink:hover,
+.btn.flat[ld-ripple-effect].purple:hover,
+.btn.flat[ld-ripple-effect].yellow:hover,
+.btn.flat[ld-ripple-effect].orange:hover {
+  background-color: transparent;
+}
+.btn.flat[ld-ripple-effect].grey:active,
+.btn.flat[ld-ripple-effect].default:active,
+.btn.flat[ld-ripple-effect].blue:active,
+.btn.flat[ld-ripple-effect].red:active,
+.btn.flat[ld-ripple-effect].green:active,
+.btn.flat[ld-ripple-effect].pink:active,
+.btn.flat[ld-ripple-effect].purple:active,
+.btn.flat[ld-ripple-effect].yellow:active,
+.btn.flat[ld-ripple-effect].orange:active {
+  background-color: transparent;
+}
+.btn.flat.grey,
+.btn.flat.default {
+  color: #000;
+}
+.btn.flat.grey:hover,
+.btn.flat.default:hover {
+  background-color: rgba(158, 158, 158, 0.3);
+}
+.btn.flat.grey:not([ld-ripple-effect]):active,
+.btn.flat.default:not([ld-ripple-effect]):active {
+  background-color: rgba(158, 158, 158, 0.5);
+}
+.btn.flat.grey .ripple,
+.btn.flat.default .ripple {
+  background-color: #9e9e9e;
+}
+.btn.flat.blue {
+  color: #000;
+}
+.btn.flat.blue:hover {
+  background-color: rgba(33, 150, 243, 0.3);
+}
+.btn.flat.blue:not([ld-ripple-effect]):active {
+  background-color: rgba(33, 150, 243, 0.5);
+}
+.btn.flat.blue .ripple {
+  background-color: #2196f3;
+}
+.btn.flat.red {
+  color: #000;
+}
+.btn.flat.red:hover {
+  background-color: rgba(244, 67, 54, 0.3);
+}
+.btn.flat.red:not([ld-ripple-effect]):active {
+  background-color: rgba(244, 67, 54, 0.5);
+}
+.btn.flat.red .ripple {
+  background-color: #f44336;
+}
+.btn.flat.green {
+  color: #000;
+}
+.btn.flat.green:hover {
+  background-color: rgba(76, 175, 80, 0.3);
+}
+.btn.flat.green:not([ld-ripple-effect]):active {
+  background-color: rgba(76, 175, 80, 0.5);
+}
+.btn.flat.green .ripple {
+  background-color: #4caf50;
+}
+.btn.flat.pink {
+  color: #000;
+}
+.btn.flat.pink:hover {
+  background-color: rgba(233, 30, 99, 0.3);
+}
+.btn.flat.pink:not([ld-ripple-effect]):active {
+  background-color: rgba(233, 30, 99, 0.5);
+}
+.btn.flat.pink .ripple {
+  background-color: #e91e63;
+}
+.btn.flat.purple {
+  color: #000;
+}
+.btn.flat.purple:hover {
+  background-color: rgba(156, 39, 176, 0.3);
+}
+.btn.flat.purple:not([ld-ripple-effect]):active {
+  background-color: rgba(156, 39, 176, 0.5);
+}
+.btn.flat.purple .ripple {
+  background-color: #9c27b0;
+}
+.btn.flat.yellow {
+  color: #000;
+}
+.btn.flat.yellow:hover {
+  background-color: rgba(255, 235, 59, 0.3);
+}
+.btn.flat.yellow:not([ld-ripple-effect]):active {
+  background-color: rgba(255, 235, 59, 0.5);
+}
+.btn.flat.yellow .ripple {
+  background-color: #ffeb3b;
+}
+.btn.flat.orange {
+  color: #000;
+}
+.btn.flat.orange:hover {
+  background-color: rgba(255, 152, 0, 0.3);
+}
+.btn.flat.orange:not([ld-ripple-effect]):active {
+  background-color: rgba(255, 152, 0, 0.5);
+}
+.btn.flat.orange .ripple {
+  background-color: #ff9800;
 }
 .btn.link {
   color: blue;
@@ -10,4 +260,26 @@
 }
 .btn.link:hover {
   text-decoration: underline;
+}
+[ld-ripple-effect] {
+  overflow: hidden;
+  position: relative;
+}
+.ripple {
+  position: absolute;
+  border-radius: 50%;
+  width: 50px;
+  height: 50px;
+  animation: ripple-animation 2s;
+  animation-fill-mode: forwards;
+}
+@keyframes ripple-animation {
+  from {
+    transform: scale(1);
+    opacity: 0.3;
+  }
+  to {
+    transform: scale(20);
+    opacity: 0;
+  }
 }
