--- a/css/button.less
+++ b/css/button.less
@@ -1,8 +1,204 @@
+/* Colors */
+@red: #f44336;
+@pink: #e91e63;
+@purple: #9c27b0;
+@blue: #2196f3;
+@green: #4caf50;
+@yellow: #ffeb3b;
+@orange: #ff9800;
+@grey: #9e9e9e;
+
+/* Box-Shadow */
+@boxshadow: 0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12);
+@boxshadow_hover: 0 5px 11px 0 rgba(0,0,0,0.18),0 4px 15px 0 rgba(0,0,0,0.15);
+
 .btn{
-    background-color: transparent;
+    background-color: @grey;
     border: none;
+    border-radius: 2px;
+    box-shadow: @boxshadow;
+    color: #000;
     cursor: pointer;
     display: block;
+    font-weight: 600;
+    height: 36px;
+    letter-spacing: .3px;
+    line-height: 36px;
+    outline: 0;
+    padding: 0 15px;
+    text-align: center;
+    text-transform: uppercase;
+    transition: all .3s ease-out;
+
+    .ripple{
+        background-color: #fff
+    }
+    &:hover{
+        box-shadow: @boxshadow_hover;
+        background-color: lighten(@grey, 10%);
+    }
+    &:not([ld-ripple-effect]):active{
+        background-color: lighten(@grey, 20%);
+    }
+    
+    &.grey, &.default{
+        background-color: @grey;
+        color: #000;
+        &:hover{
+            background-color: lighten(@grey, 10%);
+        }
+        &:not([ld-ripple-effect]):active{
+            background-color: lighten(@grey, 20%);
+        }
+    }
+    &.blue{
+        background-color: @blue;
+        color: #fff;
+        &:hover{
+            background-color: lighten(@blue, 10%);
+        }
+        &:not([ld-ripple-effect]):active{
+            background-color: lighten(@blue, 20%);
+        }
+    }
+    &.red{
+        background-color: @red;
+        color: #fff;
+        &:hover{
+            background-color: lighten(@red, 10%);
+        }
+        &:not([ld-ripple-effect]):active{
+            background-color: lighten(@red, 20%);
+        }
+    }
+    &.green{
+        background-color: @green;
+        color: #fff;
+        &:hover{
+            background-color: lighten(@green, 10%);
+        }
+        &:not([ld-ripple-effect]):active{
+            background-color: lighten(@green, 20%);
+        }
+    }
+    &.pink{
+        background-color: @pink;
+        color: #fff;
+        &:hover{
+            background-color: lighten(@pink, 10%);
+        }
+        &:not([ld-ripple-effect]):active{
+            background-color: lighten(@pink, 20%);
+        }
+    }
+    &.purple{
+        background-color: @purple;
+        color: #fff;
+        &:hover{
+            background-color: lighten(@purple, 10%);
+        }
+        &:not([ld-ripple-effect]):active{
+            background-color: lighten(@purple, 20%);
+        }
+    }
+    &.yellow{
+        background-color: @yellow;
+        color: #000;
+        &:hover{
+            background-color: lighten(@yellow, 10%);
+        }
+        &:not([ld-ripple-effect]):active{
+            background-color: lighten(@yellow, 20%);
+        }
+    }
+    &.orange{
+        background-color: @orange;
+        color: #fff;
+        &:hover{
+            background-color: lighten(@orange, 10%);
+        }
+        &:not([ld-ripple-effect]):active{
+            background-color: lighten(@orange, 20%);
+        }
+    }
+
+    &.flat{
+        background-color: transparent;
+        box-shadow: none;
+        color: #000;
+        
+        .ripple{ background-color: @grey }
+        &:hover{
+            box-shadow: none;
+            background-color: fade(@grey, 30%);
+        }
+        &:not([ld-ripple-effect]):active{
+            background-color: fade(@grey, 50%);
+        }
+        
+        &[ld-ripple-effect]{
+            &:hover{ background-color: transparent; }
+            &:active{ background-color: transparent; }
+
+            &.grey, &.default, &.blue, &.red, &.green,
+            &.pink, &.purple, &.yellow, &.orange{
+                &:hover{ background-color: transparent; }
+                &:active{ background-color: transparent; }
+            }
+        }
+
+        &.grey, &.default{
+            color: #000;
+            &:hover{ background-color: fade(@grey, 30%);  }
+            &:not([ld-ripple-effect]):active{ background-color: fade(@grey, 50%); }
+            .ripple{ background-color: @grey }
+        }
+        &.blue{
+            color: #000;
+            &:hover{ background-color: fade(@blue, 30%);  }
+            &:not([ld-ripple-effect]):active{ background-color: fade(@blue, 50%); }
+            .ripple{ background-color: @blue }
+        }
+        &.red{
+            color: #000;
+            &:hover{ background-color: fade(@red, 30%);  }
+            &:not([ld-ripple-effect]):active{ background-color: fade(@red, 50%); }
+            .ripple{ background-color: @red }
+        }
+        &.green{
+            color: #000;
+            &:hover{ background-color: fade(@green, 30%);  }
+            &:not([ld-ripple-effect]):active{ background-color: fade(@green, 50%); }
+            .ripple{ background-color: @green }
+        }
+        &.pink{
+            color: #000;
+            &:hover{ background-color: fade(@pink, 30%);  }
+            &:not([ld-ripple-effect]):active{ background-color: fade(@pink, 50%); }
+            .ripple{ background-color: @pink }
+        }
+        &.purple{
+            color: #000;
+            &:hover{ background-color: fade(@purple, 30%);  }
+            &:not([ld-ripple-effect]):active{ background-color: fade(@purple, 50%); }
+            .ripple{ background-color: @purple }
+        }
+        &.yellow{
+            color: #000;
+            &:hover{ background-color: fade(@yellow, 30%);  }
+            &:not([ld-ripple-effect]):active{ background-color: fade(@yellow, 50%); }
+            .ripple{ background-color: @yellow }        
+        }
+        &.orange{
+            color: #000;
+            &:hover{ background-color: fade(@orange, 30%);  }
+            &:not([ld-ripple-effect]):active{ background-color: fade(@orange, 50%); }
+            .ripple{ background-color: @orange }
+        }
+    }
+
+
+
 
     &.link{
         color: blue;
@@ -12,5 +208,83 @@
             text-decoration: underline;
         }
     }
+}
 
+[ld-ripple-effect] {
+    overflow: hidden;
+    position: relative
+}
+.ripple {
+    position: absolute;
+    border-radius: 50%;
+    width: 50px;
+    height: 50px;
+    -moz-animation: ripple-animation 2s;
+    -o-animation: ripple-animation 2s;
+    -webkit-animation: ripple-animation 2s;
+    animation: ripple-animation 2s;
+    -moz-animation-fill-mode: forwards;
+    -o-animation-fill-mode: forwards;
+    -webkit-animation-fill-mode: forwards;
+    animation-fill-mode: forwards;  
+}
+
+@-moz-keyframes ripple-animation {
+    from {
+        -moz-transform: scale(1);
+        -ms-transform: scale(1);
+        -o-transform: scale(1);
+        -webkit-transform: scale(1);
+        transform: scale(1);
+        opacity: .3
+    }
+
+    to {
+        -moz-transform: scale(20);
+        -ms-transform: scale(20);
+        -o-transform: scale(20);
+        -webkit-transform: scale(20);
+        transform: scale(20);
+        opacity: 0
+    }
+}
+
+@-webkit-keyframes ripple-animation {
+    from {
+        -moz-transform: scale(1);
+        -ms-transform: scale(1);
+        -o-transform: scale(1);
+        -webkit-transform: scale(1);
+        transform: scale(1);
+        opacity: .3
+    }
+
+    to {
+        -moz-transform: scale(20);
+        -ms-transform: scale(20);
+        -o-transform: scale(20);
+        -webkit-transform: scale(20);
+        transform: scale(20);
+        opacity: 0
+    }
+}
+
+@keyframes ripple-animation {
+    from {
+        -moz-transform: scale(1);
+        -ms-transform: scale(1);
+        -o-transform: scale(1);
+        -webkit-transform: scale(1);
+        transform: scale(1);
+        opacity: .3
+    }
+
+    to {
+        -moz-transform: scale(20);
+        -ms-transform: scale(20);
+        -o-transform: scale(20);
+        -webkit-transform: scale(20);
+        transform: scale(20);
+        opacity: 0
+    }
 }
