Code display basic

--- a/css/button.less
+++ b/css/button.less
@@ -44,82 +44,50 @@
     &.grey, &.default{
         background-color: @grey;
         color: #000;
-        &:hover{
-            background-color: lighten(@grey, 10%);
-        }
-        &:not([ld-ripple-effect]):active{
-            background-color: lighten(@grey, 20%);
-        }
+        &:hover{ background-color: lighten(@grey, 10%); }
+        &:not([ld-ripple-effect]):active{ background-color: lighten(@grey, 20%); }
     }
     &.blue{
         background-color: @blue;
         color: #fff;
-        &:hover{
-            background-color: lighten(@blue, 10%);
-        }
-        &:not([ld-ripple-effect]):active{
-            background-color: lighten(@blue, 20%);
-        }
+        &:hover{ background-color: lighten(@blue, 10%); }
+        &:not([ld-ripple-effect]):active{ background-color: lighten(@blue, 20%); }
     }
     &.red{
         background-color: @red;
         color: #fff;
-        &:hover{
-            background-color: lighten(@red, 10%);
-        }
-        &:not([ld-ripple-effect]):active{
-            background-color: lighten(@red, 20%);
-        }
+        &:hover{ background-color: lighten(@red, 10%); }
+        &:not([ld-ripple-effect]):active{ background-color: lighten(@red, 20%); }
     }
     &.green{
         background-color: @green;
         color: #fff;
-        &:hover{
-            background-color: lighten(@green, 10%);
-        }
-        &:not([ld-ripple-effect]):active{
-            background-color: lighten(@green, 20%);
-        }
+        &:hover{ background-color: lighten(@green, 10%); }
+        &:not([ld-ripple-effect]):active{ background-color: lighten(@green, 20%); }
     }
     &.pink{
         background-color: @pink;
         color: #fff;
-        &:hover{
-            background-color: lighten(@pink, 10%);
-        }
-        &:not([ld-ripple-effect]):active{
-            background-color: lighten(@pink, 20%);
-        }
+        &:hover{ background-color: lighten(@pink, 10%); }
+        &:not([ld-ripple-effect]):active{ background-color: lighten(@pink, 20%); }
     }
     &.purple{
         background-color: @purple;
         color: #fff;
-        &:hover{
-            background-color: lighten(@purple, 10%);
-        }
-        &:not([ld-ripple-effect]):active{
-            background-color: lighten(@purple, 20%);
-        }
+        &:hover{ background-color: lighten(@purple, 10%); }
+        &:not([ld-ripple-effect]):active{ background-color: lighten(@purple, 20%); }
     }
     &.yellow{
         background-color: @yellow;
         color: #000;
-        &:hover{
-            background-color: lighten(@yellow, 10%);
-        }
-        &:not([ld-ripple-effect]):active{
-            background-color: lighten(@yellow, 20%);
-        }
+        &:hover{ background-color: lighten(@yellow, 10%); }
+        &:not([ld-ripple-effect]):active{ background-color: lighten(@yellow, 20%); }
     }
     &.orange{
         background-color: @orange;
         color: #fff;
-        &:hover{
-            background-color: lighten(@orange, 10%);
-        }
-        &:not([ld-ripple-effect]):active{
-            background-color: lighten(@orange, 20%);
-        }
+        &:hover{ background-color: lighten(@orange, 10%); }
+        &:not([ld-ripple-effect]):active{ background-color: lighten(@orange, 20%); }
     }
 
     &.flat{
