--- a/css/style.less
+++ b/css/style.less
@@ -332,4 +332,12 @@ nav{
             clear: both;
         }
     }
+    code{
+        clear: both;
+        display: block;
+        background-color: #262626;
+        color: #fff;
+        margin: 5px;
+        padding: 5px 10px;
+    }
  }
